--- a/calibration.html
+++ b/calibration.html
@@ -1,15 +1,20 @@
-<html>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <head>
-        <title>キャリブレーション設定画面</title>
-    </head>
-    <link rel="stylesheet" href="./css/calibration.css">
-    <body>
-        <h1 class="title">キャリブレーション設定画面</h1>
-        <div class="container">
-            <div id="init" class="button"></div>
-            <div id="preview"></div>
-        </div>
-    </body>
-    <script src="./js/calibration.js"></script>
+<html lang="ja">
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+
+<head>
+    <title>キャリブレーション設定画面</title>
+    <meta charset="utf-8">
+</head>
+<link rel="stylesheet" href="./css/calibration.css">
+<link rel="stylesheet" href="./css/main.css">
+
+<body>
+    <h1 class="title">キャリブレーション設定画面</h1>
+    <div class="container">
+        <div id="init"></div>
+        <div id="exit"></div>
+    </div>
+</body>
+<script src="./js/calibration.js"></script>
+
 </html>
