--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <link rel="stylesheet" href="./css/main.css">
-    <head>
-        <title>sprefence</title>
-    </head>
-    <body>
-        <div class="container">
-            <h1 class="title">sprefence</h1>
-            <input class="button" type="button" onclick="location.href='./calibration.html'" value="calibration">
-        </div> 
+<link rel="stylesheet" href="./css/main.css">
+
+<head>
+    <title>sprefence</title>
+    <meta charset="utf-8">
+</head>
+
+<body>
+    <div class="container">
+        <h1 class="title">sprefence</h1>
+        <input class="button" type="button" onclick="location.href='./calibration.html'" value="calibration" />
+        <input onclick="switchOn()" class="button" type="button" value="force ON" />
+        <input onclick="switchOff()" class="button" type="button" value="force OFF" />
+    </div>
     <script src="./js/main.js"></script>
-    </body>
+    <script src="./js/switch.js"></script>
+</body>
+
 </html>
